<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.puzzleherexamenandroid.puzzle.PuzzleViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/solvedTitle"
            style="@style/TextAppearance.MyTheme.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wrong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/animation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:solveAnimation="@{false}"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/solvedTitle"
            android:contentDescription="@string/dog_sad" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.70" />

        <Button
            android:id="@+id/tryAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            app:layout_constraintBottom_toTopOf="@+id/selectAnotherButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/selectAnotherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_another"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tryAgainButton"
            app:layout_constraintStart_toStartOf="@+id/tryAgainButton"
            app:layout_constraintTop_toBottomOf="@+id/tryAgainButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>